# meshymesh

./: .gitignore  CHANGELOG.md  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  discovery.rs  history.rs  lifecycle.rs  messaging.rs  mod.rs  settings.rs
src-tauri/src/transport/: ble.rs  connection.rs  mod.rs  router.rs  serial.rs
src/components/config/: BluetoothConfigSection.tsx  ChannelsSection.tsx  DeviceConfigSection.tsx  DisplayConfigSection.tsx  FormFields.tsx  LoraConfigSection.tsx  PositionConfigSection.tsx  PowerConfigSection.tsx  RadioConfigEditor.tsx  SecurityConfigSection.tsx
src/components/dialogs/: AddConnectionDialog.tsx  ChangesDialog.tsx  ConfirmDialog.tsx
src/components/layout/: AppLayout.tsx  ContentArea.tsx  NodeRail.tsx  Sidebar.tsx  StatusBar.tsx
src/components/ui/: ErrorBoundary.tsx
src/components/views/: ConversationsView.tsx  MapView.tsx  NodesView.tsx  SettingsView.tsx
src/hooks/: useMeshtasticEvents.ts
src/lib/: adminTracker.test.ts  adminTracker.ts  cache.ts  mockData.ts  tauri.ts
src/stores/: nodeStore.test.ts  nodeStore.ts  types.ts  uiStore.test.ts  uiStore.ts
src/test/: setup.ts
