[package]
name = "meshymesh"
version = "0.3.1"
description = "Multi-node Meshtastic client for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "meshymesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
meshtastic = { version = "0.1.8", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
prost = "0.14"
tokio-serial = "5"
rand = "0.8"
